--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ crc32fast = "1.4.0"
 xz2 = "0.1.7"
 qrcode = "0.14.0"
 image = "0.25.1"
+clap = { version = "4.5.26", features = ["derive"] }
+base64 = "0.22.1"
