--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-quick-xml = { version = "0.31.0", features = ["serialize"] }
+quick-xml = { version = "0.37.2", features = ["serialize"] }
 xml = "0.8.20"
 serde = { version = "1.0.199", features = ["derive"] }
 regex = "1.10.4"
@@ -14,6 +14,10 @@ chrono = "0.4.38"
 crc32fast = "1.4.0"
 xz2 = "0.1.7"
 qrcode = "0.14.0"
-image = "0.25.1"
+image = { version = "0.25.1", features = ["png", "jpeg"] }
 clap = { version = "4.5.26", features = ["derive"] }
 base64 = "0.22.1"
+egui_extras = { version = "0.30.0" , features = ["svg"]}
+eframe = "0.30.0"
+usvg = "0.44.0"
+xmltree = "0.11.0"
