--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,8 @@ qrcode = "0.14.0"
 image = { version = "0.25.1", features = ["png", "jpeg"] }
 clap = { version = "4.5.26", features = ["derive"] }
 base64 = "0.22.1"
-egui_extras = { version = "0.30.0" , features = ["svg"]}
 eframe = "0.30.0"
 usvg = "0.44.0"
 xmltree = "0.11.0"
+resvg = "0.44.0"
+jpeg-encoder = "0.6.0"
