--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ serde = { version = "1.0.199", features = ["derive"] }
 regex = "1.10.4"
 chrono = "0.4.38"
 crc32fast = "1.4.0"
-xz2 = "0.1.7"
+liblzma = "0.3.5"
 qrcode = "0.14.0"
 image = { version = "0.25.1", features = ["png", "jpeg"] }
 clap = { version = "4.5.26", features = ["derive"] }
