--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,8 @@ name = "bysqr"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 quick-xml = { version = "0.37.2", features = ["serialize"] }
@@ -22,3 +23,4 @@ usvg = "0.44.0"
 xmltree = "0.11.0"
 resvg = "0.44.0"
 jpeg-encoder = "0.6.0"
+wasm-bindgen = "0.2.100"
