--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,8 +2,6 @@ name: Build
 
 on:
   push:
-#    tags:
-#      - 'v*'
 
 jobs:
   build:
@@ -17,22 +15,39 @@ jobs:
         arch: [x86_64]
 
     steps:
-      - name: Checkout the code
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Build the binary
+      - name: Configure
         run: |
-          cargo build --release 
+          if [[ "${{ matrix.os }}" == "ubuntu-latest" && "${{ matrix.arch }}" == "x86_64" ]]; then
+            echo "TARGET=x86_64-unknown-linux-gnu" >> $GITHUB_ENV
+            echo "DIST=bysqr-linux-x86_64" >> $GITHUB_ENV
+          elif [[ "${{ matrix.os }}" == "ubuntu-latest" && "${{ matrix.arch }}" == "aarch64" ]]; then
+            echo "TARGET=aarch64-unknown-linux-gnu" >> $GITHUB_ENV
+            echo "DIST=bysqr-linux-aarch64" >> $GITHUB_ENV
+          elif [[ "${{ matrix.os }}" == "macos-latest" && "${{ matrix.arch }}" == "x86_64" ]]; then
+            echo "TARGET=x86_64-apple-darwin" >> $GITHUB_ENV
+            echo "DIST=bysqr-darwin-x86_64" >> $GITHUB_ENV
+          elif [[ "${{ matrix.os }}" == "macos-latest" && "${{ matrix.arch }}" == "aarch64" ]]; then
+            echo "TARGET=aarch64-apple-darwin" >> $GITHUB_ENV
+            echo "DIST=bysqr-darwin-aarch64" >> $GITHUB_ENV
+          fi
 
-#      - name: Archive the binary
-#        run: |
-#          mkdir -p target/releases
-#          cp target/${{ matrix.os }}-${{ matrix.arch }}/release/my_binary target/releases/my_binary-${{ matrix.os }}-${{ matrix.arch }}.tar.gz
-#          tar -czf target/releases/my_binary-${{ matrix.os }}-${{ matrix.arch }}.tar.gz target/${{ matrix.os }}-${{ matrix.arch }}/release/my_binary
+      - name: Build
+        run: |
+          cargo build --release --bin bysqr --target $TARGET
 
-#      - name: Upload Release Assets
-#        uses: softprops/action-gh-release@v1
-#        with:
-#          files: target/releases/*
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Archive
+        if: startsWith(github.ref, 'refs/tags/')
+        run: |
+          mkdir -p target/dist
+          cp target/$TARGET/release/bysqr target/dist/$DIST
+
+      - name: Upload
+        uses: softprops/action-gh-release@v2
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: target/dist/*
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
