--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,10 +9,8 @@ jobs:
 
     strategy:
       matrix:
-#        os: [ubuntu-latest, macos-latest]
-        os: [ubuntu-latest]
-#        arch: [x86_64, aarch64]
-        arch: [x86_64]
+        os: [ubuntu-latest, macos-latest]
+        arch: [x86_64, aarch64]
 
     steps:
       - name: Checkout
