--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,8 @@ name: Release
 
 on:
   push:
-    tags:
-      - 'v*'
+#    tags:
+#      - 'v*'
 
 jobs:
   build:
@@ -11,7 +11,8 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest]
+#        os: [ubuntu-latest, macos-latest]
         arch: [x86_64, aarch64]
 
     steps:
@@ -43,9 +44,9 @@ jobs:
           cargo build --release --bin bysqr --target $TARGET --features preview
           cp target/$TARGET/release/bysqr target/dist/$DIST-minimal
 
-      - name: Release
-        uses: softprops/action-gh-release@v2
-        with:
-          files: target/dist/*
-        env:
-          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+#      - name: Release
+#        uses: softprops/action-gh-release@v2
+#        with:
+#          files: target/dist/*
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
