--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,8 +13,8 @@ jobs:
       matrix:
         os: [ubuntu-latest]
 #        os: [ubuntu-latest, macos-latest]
-#        arch: [x86_64, aarch64]
-        arch: [aarch64]
+        arch: [x86_64, aarch64]
+#        arch: [aarch64]
 
     steps:
       - name: Checkout
@@ -23,28 +23,33 @@ jobs:
       - name: Configure
         run: |
           if [[ "${{ matrix.os }}" == "ubuntu-latest" && "${{ matrix.arch }}" == "x86_64" ]]; then
+            apt install -y build-essential
             echo "TARGET=x86_64-unknown-linux-gnu" >> $GITHUB_ENV
             echo "DIST=bysqr-linux-x86_64" >> $GITHUB_ENV
+            echo "DIST_HEADLESS=bysqr-linux-x86_64-headless" >> $GITHUB_ENV
           elif [[ "${{ matrix.os }}" == "ubuntu-latest" && "${{ matrix.arch }}" == "aarch64" ]]; then
+            apt install -y build-essential gcc-aarch64-linux-gnu libc6-dev-arm64-cross
             echo "TARGET=aarch64-unknown-linux-gnu" >> $GITHUB_ENV
             echo "DIST=bysqr-linux-aarch64" >> $GITHUB_ENV
-            sudo apt install -y gcc-aarch64-linux-gnu
+            echo "DIST_HEADLESS=bysqr-linux-aarch64-headless" >> $GITHUB_ENV
           elif [[ "${{ matrix.os }}" == "macos-latest" && "${{ matrix.arch }}" == "x86_64" ]]; then
             echo "TARGET=x86_64-apple-darwin" >> $GITHUB_ENV
             echo "DIST=bysqr-darwin-x86_64" >> $GITHUB_ENV
+            echo "DIST_HEADLESS=bysqr-darwin-x86_64-headless" >> $GITHUB_ENV
           elif [[ "${{ matrix.os }}" == "macos-latest" && "${{ matrix.arch }}" == "aarch64" ]]; then
             echo "TARGET=aarch64-apple-darwin" >> $GITHUB_ENV
             echo "DIST=bysqr-darwin-aarch64" >> $GITHUB_ENV
+            echo "DIST_HEADLESS=bysqr-darwin-aarch64-headless" >> $GITHUB_ENV
           fi
+          rustup target add $TARGET
 
       - name: Build
         run: |
-          rustup target add $TARGET
           mkdir -p target/dist
           cargo build --release --bin bysqr --target $TARGET
-          cp target/$TARGET/release/bysqr target/dist/$DIST-full
+          cp target/$TARGET/release/bysqr target/dist/$DIST
           cargo build --release --bin bysqr --target $TARGET --features preview
-          cp target/$TARGET/release/bysqr target/dist/$DIST-headless
+          cp target/$TARGET/release/bysqr target/dist/$DIST_HEADLESS
 
 #      - name: Release
 #        uses: softprops/action-gh-release@v2
