--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,12 +23,12 @@ jobs:
       - name: Configure
         run: |
           if [[ "${{ matrix.os }}" == "ubuntu-latest" && "${{ matrix.arch }}" == "x86_64" ]]; then
-            apt install -y build-essential
+            sudo apt-get install -y build-essential
             echo "TARGET=x86_64-unknown-linux-gnu" >> $GITHUB_ENV
             echo "DIST=bysqr-linux-x86_64" >> $GITHUB_ENV
             echo "DIST_HEADLESS=bysqr-linux-x86_64-headless" >> $GITHUB_ENV
           elif [[ "${{ matrix.os }}" == "ubuntu-latest" && "${{ matrix.arch }}" == "aarch64" ]]; then
-            apt install -y build-essential gcc-aarch64-linux-gnu libc6-dev-arm64-cross
+            sudo apt-get install -y build-essential gcc-aarch64-linux-gnu libc6-dev-arm64-cross
             echo "TARGET=aarch64-unknown-linux-gnu" >> $GITHUB_ENV
             echo "DIST=bysqr-linux-aarch64" >> $GITHUB_ENV
             echo "DIST_HEADLESS=bysqr-linux-aarch64-headless" >> $GITHUB_ENV
