--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,8 +13,9 @@ jobs:
       matrix:
         os: [ubuntu-latest]
 #        os: [ubuntu-latest, macos-latest]
-        arch: [x86_64, aarch64]
+#        arch: [x86_64, aarch64]
 #        arch: [aarch64]
+        arch: [x86_64]
 
     steps:
       - name: Checkout
@@ -24,24 +25,27 @@ jobs:
         run: |
           if [[ "${{ matrix.os }}" == "ubuntu-latest" && "${{ matrix.arch }}" == "x86_64" ]]; then
             sudo apt-get install -y build-essential
+            rustup target add x86_64-unknown-linux-gnu
             echo "TARGET=x86_64-unknown-linux-gnu" >> $GITHUB_ENV
             echo "DIST=bysqr-linux-x86_64" >> $GITHUB_ENV
             echo "DIST_HEADLESS=bysqr-linux-x86_64-headless" >> $GITHUB_ENV
           elif [[ "${{ matrix.os }}" == "ubuntu-latest" && "${{ matrix.arch }}" == "aarch64" ]]; then
             sudo apt-get install -y build-essential gcc-aarch64-linux-gnu libc6-dev-arm64-cross
+            rustup target add aarch64-unknown-linux-gnu
             echo "TARGET=aarch64-unknown-linux-gnu" >> $GITHUB_ENV
             echo "DIST=bysqr-linux-aarch64" >> $GITHUB_ENV
             echo "DIST_HEADLESS=bysqr-linux-aarch64-headless" >> $GITHUB_ENV
           elif [[ "${{ matrix.os }}" == "macos-latest" && "${{ matrix.arch }}" == "x86_64" ]]; then
+            rustup target add x86_64-apple-darwin
             echo "TARGET=x86_64-apple-darwin" >> $GITHUB_ENV
             echo "DIST=bysqr-darwin-x86_64" >> $GITHUB_ENV
             echo "DIST_HEADLESS=bysqr-darwin-x86_64-headless" >> $GITHUB_ENV
           elif [[ "${{ matrix.os }}" == "macos-latest" && "${{ matrix.arch }}" == "aarch64" ]]; then
+            rustup target add aarch64-apple-darwin
             echo "TARGET=aarch64-apple-darwin" >> $GITHUB_ENV
             echo "DIST=bysqr-darwin-aarch64" >> $GITHUB_ENV
             echo "DIST_HEADLESS=bysqr-darwin-aarch64-headless" >> $GITHUB_ENV
           fi
-          rustup target add $TARGET
 
       - name: Build
         run: |
