--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,8 +14,8 @@ jobs:
         os: [ubuntu-latest]
 #        os: [ubuntu-latest, macos-latest]
 #        arch: [x86_64, aarch64]
-#        arch: [aarch64]
-        arch: [x86_64]
+        arch: [aarch64]
+#        arch: [x86_64]
 
     steps:
       - name: Checkout
