--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,8 +42,8 @@ jobs:
     strategy:
       matrix:
 #        arch: [x86_64, aarch64]
-        arch: [aarch64]
-#        arch: [x86_64]
+#        arch: [aarch64]
+        arch: [x86_64]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
