--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,36 +37,66 @@ jobs:
 #          cargo build --release --bin bysqr --target $TARGET --features preview
 #          cp target/$TARGET/release/bysqr target/dist/$DIST
 
-  build-darwin:
-    runs-on: macos-latest
-    strategy:
-      matrix:
+#  build-darwin:
+#    runs-on: macos-latest
+#    strategy:
+#      matrix:
 #        arch: [x86_64, aarch64]
-#        arch: [aarch64]
-        arch: [x86_64]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Configure
-        run: |
-          if [[ "${{ matrix.arch }}" == "x86_64" ]]; then
-            rustup target add x86_64-apple-darwin
-            echo "TARGET=x86_64-apple-darwin" >> $GITHUB_ENV
-            echo "DIST=bysqr-darwin-x86_64" >> $GITHUB_ENV
-            echo "DIST_HEADLESS=bysqr-darwin-x86_64-headless" >> $GITHUB_ENV
-          elif [[ "${{ matrix.arch }}" == "aarch64" ]]; then
-            rustup target add aarch64-apple-darwin
-            echo "TARGET=aarch64-apple-darwin" >> $GITHUB_ENV
-            echo "DIST=bysqr-darwin-aarch64" >> $GITHUB_ENV
-            echo "DIST_HEADLESS=bysqr-darwin-aarch64-headless" >> $GITHUB_ENV
-          fi
-      - name: Build
-        run: |
-          mkdir -p target/dist
-          cargo build --release --bin bysqr --target $TARGET
-          cp target/$TARGET/release/bysqr target/dist/$DIST_HEADLESS
-          cargo build --release --bin bysqr --target $TARGET --features preview
-          cp target/$TARGET/release/bysqr target/dist/$DIST
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v4
+#      - name: Configure
+#        run: |
+#          if [[ "${{ matrix.arch }}" == "x86_64" ]]; then
+#            rustup target add x86_64-apple-darwin
+#            echo "TARGET=x86_64-apple-darwin" >> $GITHUB_ENV
+#            echo "DIST=bysqr-darwin-x86_64" >> $GITHUB_ENV
+#            echo "DIST_HEADLESS=bysqr-darwin-x86_64-headless" >> $GITHUB_ENV
+#          elif [[ "${{ matrix.arch }}" == "aarch64" ]]; then
+#            rustup target add aarch64-apple-darwin
+#            echo "TARGET=aarch64-apple-darwin" >> $GITHUB_ENV
+#            echo "DIST=bysqr-darwin-aarch64" >> $GITHUB_ENV
+#            echo "DIST_HEADLESS=bysqr-darwin-aarch64-headless" >> $GITHUB_ENV
+#          fi
+#      - name: Build
+#        run: |
+#          mkdir -p target/dist
+#          cargo build --release --bin bysqr --target $TARGET
+#          cp target/$TARGET/release/bysqr target/dist/$DIST_HEADLESS
+#          cargo build --release --bin bysqr --target $TARGET --features preview
+#          cp target/$TARGET/release/bysqr target/dist/$DIST
+
+build-windows:
+  runs-on: windows-latest
+  strategy:
+    matrix:
+#      arch: [ x86_64, aarch64 ]
+#      arch: [ aarch64 ]
+      arch: [ x86_64 ]
+  steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+    - name: Configure
+      run: |
+        if [[ "${{ matrix.arch }}" == "x86_64" ]]; then
+          rustup target add x86_64-pc-windows-msvc
+          echo "TARGET=x86_64-pc-windows-msvc" >> $env:GITHUB_ENV
+          echo "DIST=bysqr-win-x86_64.exe" >> $env:GITHUB_ENV
+          echo "DIST_HEADLESS=bysqr-win-x86_64-headless.exe" >> $env:GITHUB_ENV
+        elif [[ "${{ matrix.arch }}" == "aarch64" ]]; then
+          sudo apt-get install -y build-essential gcc-aarch64-linux-gnu libc6-dev-arm64-cross
+          rustup target add aarch64-unknown-linux-gnu
+          echo "TARGET=aarch64-unknown-linux-gnu" >> $env:GITHUB_ENV
+          echo "DIST=bysqr-linux-aarch64.exe" >> $env:GITHUB_ENV
+          echo "DIST_HEADLESS=bysqr-linux-aarch64-headless.exe" >> $env:GITHUB_ENV
+        fi
+    - name: Build
+      run: |
+        mkdir target\dist
+        cargo build --release --bin bysqr --target %TARGET%
+        copy target\%TARGET%\release\bysqr.exe target\dist\%DIST_HEADLESS%
+        cargo build --release --bin bysqr --target %TARGET% --features preview
+        cp target\%TARGET%\release\bysqr.exe target\dist\%DIST%
 
 #  build:
 #    runs-on: ubuntu-latest
