--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ crate-type = ["cdylib", "rlib"]
 [features]
 default = []
 preview = ["eframe"]
+wasm = ["wasm-bindgen"]
 
 [dependencies]
 quick-xml = { version = "0.37.2", features = ["serialize"] }
@@ -27,5 +28,5 @@ usvg = "0.44.0"
 xmltree = "0.11.0"
 resvg = "0.44.0"
 jpeg-encoder = "0.6.0"
-wasm-bindgen = "0.2.100"
+wasm-bindgen = { version = "0.2.100", optional = true }
 serde_json = "1.0.135"
