--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -78,18 +78,18 @@ jobs:
         uses: actions/checkout@v4
       - name: Configure
         run: |
-          if [[ "${{ matrix.arch }}" == "x86_64" ]]; then
+          if "%ARCH%"=="x86_64" (
             rustup target add x86_64-pc-windows-msvc
             echo "TARGET=x86_64-pc-windows-msvc" >> $env:GITHUB_ENV
             echo "DIST=bysqr-win-x86_64.exe" >> $env:GITHUB_ENV
             echo "DIST_HEADLESS=bysqr-win-x86_64-headless.exe" >> $env:GITHUB_ENV
-          elif [[ "${{ matrix.arch }}" == "aarch64" ]]; then
+          ) else if "%ARCH%"=="aarch64" (
             sudo apt-get install -y build-essential gcc-aarch64-linux-gnu libc6-dev-arm64-cross
             rustup target add aarch64-unknown-linux-gnu
             echo "TARGET=aarch64-unknown-linux-gnu" >> $env:GITHUB_ENV
             echo "DIST=bysqr-linux-aarch64.exe" >> $env:GITHUB_ENV
             echo "DIST_HEADLESS=bysqr-linux-aarch64-headless.exe" >> $env:GITHUB_ENV
-          fi
+          )
       - name: Build
         run: |
           mkdir target\dist
