--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -78,25 +78,25 @@ jobs:
         uses: actions/checkout@v4
       - name: Configure
         run: |
-          if "%ARCH%"=="x86_64" (
+          if ($env:ARCH -eq "x86_64") {
             rustup target add x86_64-pc-windows-msvc
             echo "TARGET=x86_64-pc-windows-msvc" >> $env:GITHUB_ENV
             echo "DIST=bysqr-win-x86_64.exe" >> $env:GITHUB_ENV
             echo "DIST_HEADLESS=bysqr-win-x86_64-headless.exe" >> $env:GITHUB_ENV
-          ) else if "%ARCH%"=="aarch64" (
+          } elseif ($env:ARCH -eq "aarch64") {
             sudo apt-get install -y build-essential gcc-aarch64-linux-gnu libc6-dev-arm64-cross
             rustup target add aarch64-unknown-linux-gnu
             echo "TARGET=aarch64-unknown-linux-gnu" >> $env:GITHUB_ENV
             echo "DIST=bysqr-linux-aarch64.exe" >> $env:GITHUB_ENV
             echo "DIST_HEADLESS=bysqr-linux-aarch64-headless.exe" >> $env:GITHUB_ENV
-          )
+          }
       - name: Build
         run: |
-          mkdir target\dist
-          cargo build --release --bin bysqr --target %TARGET%
-          copy target\%TARGET%\release\bysqr.exe target\dist\%DIST_HEADLESS%
-          cargo build --release --bin bysqr --target %TARGET% --features preview
-          cp target\%TARGET%\release\bysqr.exe target\dist\%DIST%
+          mkdir -Force target\dist
+          cargo build --release --bin bysqr --target $env:TARGET
+          Copy-Item "target\$env:TARGET\release\bysqr.exe" "target\dist\$env:DIST_HEADLESS"
+          cargo build --release --bin bysqr --target $env:TARGET --features preview
+          Copy-Item "target\$env:TARGET\release\bysqr.exe" "target\dist\$env:DIST"
 
 #  build:
 #    runs-on: ubuntu-latest
