--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,8 +71,8 @@ jobs:
     strategy:
       matrix:
   #      arch: [ x86_64, aarch64 ]
-  #      arch: [ aarch64 ]
-        arch: [ x86_64 ]
+        arch: [ aarch64 ]
+#        arch: [ x86_64 ]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -83,15 +83,13 @@ jobs:
           echo "TARGET=x86_64-pc-windows-msvc" | Out-File -FilePath $env:GITHUB_ENV -Append
           echo "DIST=bysqr-win-x86_64.exe" | Out-File -FilePath $env:GITHUB_ENV -Append
           echo "DIST_HEADLESS=bysqr-win-x86_64-headless.exe" | Out-File -FilePath $env:GITHUB_ENV -Append
-#        run: |
-#          if ($env:ARCH -eq "x86_64") {
-
-#          } elseif ($env:ARCH -eq "aarch64") {
-#            rustup target add aarch64-pc-windows-msvc
-#            echo "TARGET=aarch64-pc-windows-msvc" >> $env:GITHUB_ENV
-#            echo "DIST=bysqr-win-aarch64.exe" >> $env:GITHUB_ENV
-#            echo "DIST_HEADLESS=bysqr-win-aarch64-headless.exe" >> $env:GITHUB_ENV
-#          }
+      - name: Configure
+        if: matrix.arch == 'aarch64'
+        run: |
+          rustup target add aarch64-pc-windows-msvc
+          echo "TARGET=aarch64-pc-windows-msvc" | Out-File -FilePath $env:GITHUB_ENV -Append
+          echo "DIST=bysqr-win-aarch64.exe" | Out-File -FilePath $env:GITHUB_ENV -Append
+          echo "DIST_HEADLESS=bysqr-win-aarch64-headless.exe" | Out-File -FilePath $env:GITHUB_ENV -Append
       - name: Build
         run: |
           mkdir -Force target\dist
