--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,10 +32,10 @@ jobs:
 #      - name: Build
 #        run: |
 #          mkdir -p target/dist
-#          cargo build --release --bin bysqr --target $TARGET
-#          cp target/$TARGET/release/bysqr target/dist/$DIST_HEADLESS
-#          cargo build --release --bin bysqr --target $TARGET --features preview
-#          cp target/$TARGET/release/bysqr target/dist/$DIST
+#          cargo build --release --bin bysqrcli --target $TARGET
+#          cp target/$TARGET/release/bysqrcli target/dist/$DIST_HEADLESS
+#          cargo build --release --bin bysqrcli --target $TARGET --features preview
+#          cp target/$TARGET/release/bysqrcli target/dist/$DIST
 
 #  build-darwin:
 #    runs-on: macos-latest
@@ -61,10 +61,10 @@ jobs:
 #      - name: Build
 #        run: |
 #          mkdir -p target/dist
-#          cargo build --release --bin bysqr --target $TARGET
-#          cp target/$TARGET/release/bysqr target/dist/$DIST_HEADLESS
-#          cargo build --release --bin bysqr --target $TARGET --features preview
-#          cp target/$TARGET/release/bysqr target/dist/$DIST
+#          cargo build --release --bin bysqrcli --target $TARGET
+#          cp target/$TARGET/release/bysqrcli target/dist/$DIST_HEADLESS
+#          cargo build --release --bin bysqrcli --target $TARGET --features preview
+#          cp target/$TARGET/release/bysqrcli target/dist/$DIST
 
   build-windows:
     runs-on: windows-latest
@@ -93,10 +93,10 @@ jobs:
       - name: Build
         run: |
           mkdir -Force target\dist
-          cargo build --release --bin bysqr --target $env:TARGET
-          Copy-Item "target\$env:TARGET\release\bysqr.exe" "target\dist\$env:DIST_HEADLESS"
-#          cargo build --release --bin bysqr --target $env:TARGET --features preview
-#          Copy-Item "target\$env:TARGET\release\bysqr.exe" "target\dist\$env:DIST"
+          cargo build --release --bin bysqrcli --target $env:TARGET
+          Copy-Item "target\$env:TARGET\release\bysqrcli.exe" "target\dist\$env:DIST_HEADLESS"
+          cargo build --release --bin bysqrcli --target $env:TARGET --features preview
+          Copy-Item "target\$env:TARGET\release\bysqrcli.exe" "target\dist\$env:DIST"
 
 #  build:
 #    runs-on: ubuntu-latest
