--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,10 @@ edition = "2021"
 [lib]
 crate-type = ["cdylib", "rlib"]
 
+[[bin]]
+name = "bysqrcli"
+path = "src/bin/bysqr.rs"
+
 [features]
 default = []
 preview = ["eframe"]
