--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,6 +38,7 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
+          prerelease: true
           files: target/dist/*
         env:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
@@ -76,6 +77,7 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
+          prerelease: true
           files: target/dist/*
         env:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
@@ -98,6 +100,7 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
+          prerelease: true
           files: target/dist/*
         env:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
@@ -134,6 +137,7 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
+          prerelease: true
           files: target/dist/*
         env:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
