--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,16 +55,16 @@ jobs:
         if: matrix.arch == 'x86_64'
         run: |
           sudo apt-get install -y build-essential
-          rustup target add x86_64-unknown-linux-gnu
-          echo "TARGET=x86_64-unknown-linux-gnu" >> $GITHUB_ENV
+          rustup target add x86_64-unknown-linux-musl
+          echo "TARGET=x86_64-unknown-linux-musl" >> $GITHUB_ENV
           echo "DIST=bysqr-linux-x86_64" >> $GITHUB_ENV
           echo "DIST_HEADLESS=bysqr-linux-x86_64-headless" >> $GITHUB_ENV
       - name: Configure
         if: matrix.arch == 'aarch64'
         run: |
-          sudo apt-get install -y build-essential gcc-aarch64-linux-gnu libc6-dev-arm64-cross
-          rustup target add aarch64-unknown-linux-gnu
-          echo "TARGET=aarch64-unknown-linux-gnu" >> $GITHUB_ENV
+          sudo apt-get install -y build-essential gcc-aarch64-linux-musl libc6-dev-arm64-cross
+          rustup target add aarch64-unknown-linux-musl
+          echo "TARGET=aarch64-unknown-linux-musl" >> $GITHUB_ENV
           echo "DIST=bysqr-linux-aarch64" >> $GITHUB_ENV
           echo "DIST_HEADLESS=bysqr-linux-aarch64-headless" >> $GITHUB_ENV
       - name: Build
