only musl for x86

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,9 +62,9 @@ jobs:
       - name: Configure
         if: matrix.arch == 'aarch64'
         run: |
-          sudo apt-get install -y build-essential libc6-dev-arm64-cross
-          rustup target add aarch64-unknown-linux-musl
-          echo "TARGET=aarch64-unknown-linux-musl" >> $GITHUB_ENV
+          sudo apt-get install -y build-essential gcc-aarch64-linux-gnu libc6-dev-arm64-cross
+          rustup target add aarch64-unknown-linux-gnu
+          echo "TARGET=aarch64-unknown-linux-gnu" >> $GITHUB_ENV
           echo "DIST=bysqr-linux-aarch64" >> $GITHUB_ENV
           echo "DIST_HEADLESS=bysqr-linux-aarch64-headless" >> $GITHUB_ENV
       - name: Build
